"Quick" and dirty Triangle

--- a/Sakura/Sakura.vcxproj
+++ b/Sakura/Sakura.vcxproj
@@ -58,7 +58,7 @@
       <PreprocessorDefinitions>_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(SolutionDir)ED\spdlog\include\;$(ProjectDir)Source\</AdditionalIncludeDirectories>
-      <LanguageStandard>stdcpp17</LanguageStandard>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -74,7 +74,7 @@
       <PreprocessorDefinitions>NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(SolutionDir)ED\spdlog\include\;$(ProjectDir)Source\</AdditionalIncludeDirectories>
-      <LanguageStandard>stdcpp17</LanguageStandard>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -85,7 +85,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Source\Core\API\D3D12\D3D12API.cpp" />
     <ClCompile Include="Source\Core\Events\EventSystem.cpp" />
+    <ClCompile Include="Source\Core\Graphics\Mesh.cpp" />
+    <ClCompile Include="Source\Core\Graphics\Renderer.cpp" />
     <ClCompile Include="Source\Core\Input\Input.cpp" />
     <ClCompile Include="Source\Core\Log.cpp" />
     <ClCompile Include="Source\Core\Window.cpp" />
@@ -93,11 +96,18 @@
     <ClCompile Include="Source\Utils\WinMessage.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Source\Core\API\Buffer.h" />
+    <ClInclude Include="Source\Core\API\D3D12\D3D12API.hpp" />
+    <ClInclude Include="Source\Core\API\D3D12\d3dx12.h" />
+    <ClInclude Include="Source\Core\API\RendererAPI.hpp" />
     <ClInclude Include="Source\Core\Events\ApplicationEvents.hpp" />
     <ClInclude Include="Source\Core\Events\EventSystem.hpp" />
     <ClInclude Include="Source\Core\Events\IEvent.hpp" />
     <ClInclude Include="Source\Core\Events\IEventListener.hpp" />
     <ClInclude Include="Source\Core\Events\InputEvents.h" />
+    <ClInclude Include="Source\Core\Graphics\Mesh.hpp" />
+    <ClInclude Include="Source\Core\Graphics\Renderer.hpp" />
+    <ClInclude Include="Source\Core\Graphics\Vertex.hpp" />
     <ClInclude Include="Source\Core\Input\Input.hpp" />
     <ClInclude Include="Source\Core\Input\InputCodes.hpp" />
     <ClInclude Include="Source\Core\Log.hpp" />
