--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,14 @@ bld/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
+# Visual Studio Solution and Projects
+.vs/
+**.sln
+**.vcxproj
+**.vcxproj.filters
+**.vcxproj.user
+**.csproj
+
 # Visual Studio 2017 auto generated files
 Generated\ Files/
 
